--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,3 +437,251 @@ color: #6e00a3;
 color: #ffc32a;
 border-color: transparent;
 }
+.block-product .container {
+  padding-bottom: 110px !important;
+}
+.block-service {
+  background: #faf8f5;
+  position: relative;
+}
+.back_office h2 {
+  margin-bottom: 15px;
+  margin-left: 0;
+  font-size: 23px;
+}
+.back_office {
+  padding: 36px;position: relative;
+}
+.block-service .col-lg-3 {
+  margin-bottom: 18px;
+}
+.back_office::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 100px;
+  width: 3px;
+  background: #f98633;
+  top: 50%;
+  left: 0; border-radius: 0 2px 2px 0;transform: translateY(-50%);
+}
+.block-service .container {
+  border-bottom: 1px solid #d3d3d3;
+  padding-bottom: 60px !important;
+}
+.block-potential p {
+  line-height: 25px;
+color: #484848;
+margin-bottom: 16px;
+}
+.block-potential {
+  background: #faf8f5;position: relative;
+}
+.block-potential .block-potential_container {
+  background-color: #fff;
+max-width: 1750px;
+margin: 0 auto;
+padding: 90px 0 90px;
+border-radius: 12px 12px 0 0;
+}
+.years_industry li strong {
+  font-size: 80px;
+  line-height: 102px;
+  color: #FF7F00;
+}
+.years_industry li {
+  line-height: 25px;
+}
+.years_industry li {
+  width: 25%;border-color: #FF7F00;
+  margin-right: 0;
+  padding: 0 15px;
+}
+.years_industry {
+  margin-top: 80px;
+}
+.block-subscribe {
+  background: #6e00a3;
+}
+.block-subscribe .form-control {
+  height: 59px;
+  border-radius: 12px;
+  background: rgba(255,255,255,.1);
+  border: 1px solid rgba(255,227,217,.4);
+  -webkit-box-flex: 0;
+  width: 340px;
+  margin-right: 2%;
+  font-weight: 300;
+  font-size: 16px;
+  color: #fff;
+  padding: 0 20px;
+  outline: none !important;
+  box-shadow: none !important;
+}
+.block-subscribe .btn_all {
+  background: #f98633;
+  height: 59px;
+}
+.block-subscribe input::placeholder {
+  color: #fff;opacity: 0.4;
+}
+footer {
+  padding-top: 90px;
+}
+.mobile_menu {
+  display: none;
+}
+.mobile_menu span {
+  background-color: #484848;
+  width: 22px;
+  height: 2px;
+  display: block;
+  margin-bottom: 6px;
+  opacity: .6;
+  transition: all .4s linear;
+}
+.mobile_menu {
+  background: transparent;
+  border: 0;
+  box-shadow: none;
+  outline: none;
+  padding: 0;
+  width: auto;overflow: hidden;
+  margin-right: 15px;
+}
+
+@media (max-width: 991px) {
+  .mobile_menu {
+    display: block;
+  }
+  .container {
+  width: 100% !important;
+  max-width: 100% !important;
+  padding: 0 20px !important;
+}
+.header {
+  position: relative;
+}
+.header .header_nav {
+  position: fixed;
+  width: 100% !important;
+  right: 0;
+  z-index: 99999;
+  padding: 40px 0 10px;
+  overflow: auto;
+  background-color: #faf8f5;
+  box-shadow: inset 0 2px 10px 2px rgba(0,0,0,.1);
+  transition: all .5s ease 0s;
+  top: 80px;height: 100%;
+}
+.header_nav_menu {
+  flex-direction: column;
+}
+.header_nav_menu li {
+  display: block;
+  margin-right: 0;
+  margin-bottom: 20px;
+}
+.header_nav_menu li a {
+  padding-bottom: 10px;
+}
+.header_nav_menu {
+  padding: 0 23px;
+}
+.header .header_nav {
+  transform: translateY(-402%);
+  visibility: hidden;
+}
+.header .header_nav_open {
+transform: translateY(0);
+  visibility: visible;
+}
+.mobile_menu_open span:nth-child(2) {
+  transform: translateX(143%);
+  visibility: hidden;
+}
+.mobile_menu_open span:first-child {
+  transform: rotate(45deg);
+  position: relative;
+  top: 8px;
+}
+.mobile_menu_open span.mb-0 {
+  transform: rotate(-45deg);
+  position: relative;
+  top: -8px;
+}
+
+}
+
+@media (max-width: 767px) {
+  .block-solutions .col-md-4 {
+  margin-bottom: 18px;
+}
+.block-product .col-md-5 {
+  min-height: 410px;
+  margin-bottom: 100px;
+}
+.block-product .col-md-7 {
+  padding-left: 15px !important;
+}
+.product_item {
+  height: 410px;
+width: 340px;
+left: 0;
+right: 0;
+margin: 0px auto;
+}
+.product_img img {
+  height: 410px;
+}
+.product_content {
+  left: 0;
+}
+.years_industry li strong {
+  font-size: 40px;
+}
+.years_industry li {
+  width: 50%;
+}
+.years_industry li:nth-child(2) {
+  border-right: 0;
+}
+.years_industry li {
+  margin-bottom: 50px;
+}
+.block-potential .block-potential_container {
+  max-width: 100%;
+}
+.block-subscribe .col-md-6 .w-auto {
+  width: 100% !important;
+}
+.block-subscribe .col-md-6 .d-flex {
+  flex-wrap: wrap;
+}
+.block-subscribe .col-md-6 .d-flex input, .block-subscribe .col-md-6 .d-flex button {
+  width: 100% !important;
+}
+.block-subscribe .block_title.text-white.mb-0 {
+  margin-bottom: 30px !important;
+}
+.block_title, .banner h3 {
+  font-size: 35px;}
+.product_item {
+  width: 100%;}
+  .banner h1 {
+  font-size: 50px;
+}
+.sportsbook_content h3 {
+  font-size: 20px;
+}
+}
+
+@media (max-width: 580px) {
+  .sportsbook_icon {
+  width: 60px;
+  height: 60px;
+}
+.btn-product {
+  font-size: 14px;
+}
+}
