--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -613,7 +613,7 @@ box-shadow: 0 -1px 8px 0px rgba(0,0,0,.25);
 display: none;
 }
 .chat_btn_dsk {
-  display: flex;
+  display: flex;align-items: center;
 }
 .fa.fa-linkedin-in::before {
   content: "\f0e1";
@@ -621,6 +621,9 @@ display: none;
 .social_icon li a i {
   color: #f98633;
   font-size: 16px;
+}
+.footer_nav li {
+  margin-bottom: 0;
 }
 
 
