--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,12 +532,12 @@ footer {
   display: none;
 }
 .mobile_menu span {
-  background-color: #484848;
+  background-color: #ffe8d7;
   width: 22px;
   height: 2px;
   display: block;
   margin-bottom: 6px;
-  opacity: .6;
+  opacity: 1;
   transition: all .4s linear;
 }
 .mobile_menu {
@@ -746,6 +746,9 @@ padding: 8px 30px;
   filter: invert(1);
   opacity: 1;
 }
+.mb_desk {
+  display: none;
+}
 
 
 
@@ -807,7 +810,7 @@ padding: 8px 30px;
   background-color: #faf8f5;
   box-shadow: inset 0 2px 10px 2px rgba(0,0,0,.1);
   transition: all .5s ease 0s;
-  top: 80px;height: 100%;
+  top: 110px;height: 100%;
 }
 .header_nav_menu {
   flex-direction: column;
@@ -862,6 +865,47 @@ transform: translateY(0);
 }
 .banner .col-lg-6:last-child {
   order: 1;
+}
+.mb_desk {
+  display: inline-block;
+}
+.call_btn {
+  background: #fff;
+  display: inline-block;
+  color: #000;
+  font-size: 14px;
+  border: 1px solid #ff7f00;
+  text-decoration: none;
+  padding: 0px 0 0px 12px;
+  border-radius: 30px;
+}
+.call_btn strong {
+  background: #ff7f00;
+  padding: 4px 12px 3px 10px;
+  border-radius: 0 11px 11px 0;
+  margin-left: 3px;
+  color: #ffe8d7;font-weight: 400;
+}
+.mb-center {
+  text-align: center;
+}
+.call_btn {
+  position: relative;
+  top: -13px;
+}
+.sticky .call_btn {
+  display: none;
+}
+.mobile_menu {
+  background: #ff7f00;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 }
