--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -775,7 +775,7 @@ padding: 8px 30px;
   display: none;
 }
   .header.sticky .header_nav {
-  top: 62px;
+  top: 90px;
 }
   .chat_btn i {
   margin-right: 0;
@@ -894,7 +894,8 @@ transform: translateY(0);
   top: -13px;
 }
 .sticky .call_btn {
-  display: none;
+  position: relative;
+  top: -8px;
 }
 .mobile_menu {
   background: #ff7f00;
