--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -613,11 +613,11 @@ top: 50%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #fff3ea;
+  background: transparent;
   position: fixed;
   bottom: 0;
   padding: 8px 15px;
-box-shadow: 0 -1px 8px 0px rgba(0,0,0,.25);
+/*box-shadow: 0 -1px 8px 0px rgba(0,0,0,.25);*/
 display: none;
 }
 .chat_btn_dsk {
