--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
   max-width: 1500px;
   padding: 27px 20px;
   margin: 0 auto;
-  background-color: rgba(249,134,51,.1);
+  background-color: #202020;
 }
 .header_logo img {
   width: 190px;
@@ -22,8 +22,7 @@ font-size: 16px;
 padding: 3px 3px 28px;
 font-weight: 700;
 line-height: 16px;
-color: #484848;
-opacity: .6;
+color: #b7b7b7;
 display: flex;
 align-items: center;
 transition: box-shadow .2s ease-in-out;
@@ -637,9 +636,9 @@ display: none;
   position: fixed;
   top: 0;
   z-index: 99999;
-  background: #ffe8d7;
+  background: #000;
   padding: 15px 20px;
-  box-shadow: 0 0 4px 4px rgba(0,0,0,.25);
+  box-shadow: 0 0 10px #000;
 }
 .header.sticky .header_nav_menu li a {
   padding-bottom: 3px;
@@ -655,7 +654,7 @@ display: none;
   margin-bottom: 5px;
 }
 .header_top_contact li a {
-  color: #484848;
+  color: #b7b7b7;
 font-size: 14px;
 transition: .2s;
 text-decoration: none;
