--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
   max-width: 1500px;
   padding: 27px 20px;
   margin: 0 auto;
-  background-color: #202020;
+  background-color: rgba(249,134,51,.1);
 }
 .header_logo img {
   width: 190px;
@@ -22,7 +22,8 @@ font-size: 16px;
 padding: 3px 3px 28px;
 font-weight: 700;
 line-height: 16px;
-color: #b7b7b7;
+color: #484848;
+opacity: .6;
 display: flex;
 align-items: center;
 transition: box-shadow .2s ease-in-out;
@@ -539,9 +540,9 @@ footer {
   display: none;
 }
 .mobile_menu span {
-  background-color: #ffe8d7;
-  width: 22px;
-  height: 2px;
+  background-color: #ff7f00;
+  width: 25px;
+height: 3px;
   display: block;
   margin-bottom: 6px;
   opacity: 1;
@@ -554,7 +555,7 @@ footer {
   outline: none;
   padding: 0;
   width: auto;overflow: hidden;
-  margin-right: 15px;
+  margin-right: 0px;
 }
 .product_content .btn_all {
   border: 1px solid #d3d3d3;
@@ -636,9 +637,9 @@ display: none;
   position: fixed;
   top: 0;
   z-index: 99999;
-  background: #000;
+  background: #ffe8d7;
   padding: 15px 20px;
-  box-shadow: 0 0 10px #000;
+  box-shadow: 0 0 4px 4px rgba(0,0,0,.25);
 }
 .header.sticky .header_nav_menu li a {
   padding-bottom: 3px;
@@ -654,7 +655,7 @@ display: none;
   margin-bottom: 5px;
 }
 .header_top_contact li a {
-  color: #b7b7b7;
+  color: #484848;
 font-size: 14px;
 transition: .2s;
 text-decoration: none;
@@ -907,15 +908,17 @@ padding: 8px 30px;
 }
 .header .header_nav {
   position: fixed;
-  width: 100% !important;
-  right: 0;
-  z-index: 99999;
-  padding: 40px 0 10px;
-  overflow: auto;
-  background-color: #faf8f5;
-  box-shadow: inset 0 2px 10px 2px rgba(0,0,0,.1);
-  transition: all .5s ease 0s;
-  top: 110px;height: 100%;
+width: 260px !important;
+left: 0;
+z-index: 99999;
+padding: 40px 0 10px;
+  padding-top: 40px;
+overflow: auto;
+background-color: #000;
+transition: all .5s ease 0s;
+top: 0;
+height: 100%;
+padding-top: 110px;
 }
 .header_nav_menu {
   flex-direction: column;
@@ -923,35 +926,43 @@ padding: 8px 30px;
 .header_nav_menu li {
   display: block;
   margin-right: 0;
-  margin-bottom: 20px;
+  margin-bottom:0px;
 }
 .header_nav_menu li a {
   padding-bottom: 10px;
 }
 .header_nav_menu {
-  padding: 0 23px;
+  padding: 0;
 }
 .header .header_nav {
-  transform: translateY(-402%);
+  left: -260px;
   visibility: hidden;
 }
-.header .header_nav_open {
-transform: translateY(0);
+.openNav body {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,0.6);
+}
+.openNav .header .header_nav {
+transform: translate3d(260px,0,0);
   visibility: visible;
 }
-.mobile_menu_open span:nth-child(2) {
-  transform: translateX(143%);
+.openNav .mobile_menu span:nth-child(2) {
+  transform: translateX(-143%);
   visibility: hidden;
 }
-.mobile_menu_open span:first-child {
+.openNav .mobile_menu span:first-child {
   transform: rotate(45deg);
   position: relative;
   top: 8px;
 }
-.mobile_menu_open span.mb-0 {
+.openNav .mobile_menu span.mb-0 {
   transform: rotate(-45deg);
   position: relative;
-  top: -8px;
+  top: -10px;
 }
 .product_content .btn_all {
   display: flex;
@@ -1003,7 +1014,7 @@ transform: translateY(0);
   top: -8px;
 }
 .mobile_menu {
-  background: #ff7f00;
+  background: transparent;
   width: 35px;
   height: 35px;
   border-radius: 50%;
@@ -1012,10 +1023,56 @@ transform: translateY(0);
   justify-content: center;
   flex-wrap: wrap;
   flex-direction: column;
+  z-index: 999999;
 }
 .d-mobile {display: none;}
 .d-desktop {
   display: block;
+}
+.header__wrapper {
+  position: relative;
+  justify-content: center !important;
+}
+.header__wrapper .mobile_menu {
+  position: absolute;
+  left: 0;
+}
+.header_nav_menu li a {
+  padding: 12px 10px 12px 15px !important;
+  color: #fff;
+  opacity: 1;
+  font-weight: 300;
+  border-top: 1px solid #212122;
+  font-size: 14px;box-shadow: none !important;
+}
+.header_nav_menu .sub-menu {
+  position: static;
+  border-radius: 0;
+  padding: 0;
+  transform: none;
+  opacity: 1;
+  background: #e6e2e2;
+  visibility: visible;
+  display: none;
+}
+.header_nav_menu .sub-menu li a {
+  border-color: #d7d9db;
+}
+.header_nav_menu .sub-menu.sub_menu_aftive {
+  display: block;
+}
+.dropdown_menu .dropdown-toggle::after {
+
+    position: absolute;
+    right: 10px;
+    font-size: 20px !important;
+    margin: 0;
+
+}
+.request_btn {
+  padding: 12px 10px 12px 15px !important;
+  border-top: 1px solid #212122;
+  margin: 0 !important;
 }
 
 }
