--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,13 @@ body {
 }
 .header {
   max-width: 1500px;
-  padding: 27px 20px;
+  padding: 15px 20px;
   margin: 0 auto;
-  background-color: rgba(249,134,51,.1);
+  background-color: #fcd009;
+  padding-top: 8px;
+}
+.header_logo {
+  background: #000;
 }
 .header_logo img {
   width: 190px;
@@ -19,20 +23,21 @@ position: relative;
 }
 .header_nav_menu li a {
 font-size: 16px;
-padding: 3px 3px 28px;
+padding: 3px 3px 3px;
 font-weight: 700;
 line-height: 16px;
-color: #484848;
-opacity: .6;
+color: #333 !important;
+opacity: 1;
 display: flex;
 align-items: center;
 transition: box-shadow .2s ease-in-out;
+font-family: 'Josefin Sans', sans-serif;
 }
-.header_nav_menu li a:hover {
+/*.header_nav_menu li a:hover {
   color: #ff7f00;
 opacity: 1;
 box-shadow: inset 0 -4px 0 0 #ff7f00;
-}
+}*/
 .header_nav_menu {
   flex-direction: inherit;
 }
@@ -540,7 +545,7 @@ footer {
   display: none;
 }
 .mobile_menu span {
-  background-color: #ff7f00;
+  background-color: #000;
   width: 25px;
 height: 3px;
   display: block;
@@ -637,16 +642,20 @@ display: none;
   position: fixed;
   top: 0;
   z-index: 99999;
-  background: #ffe8d7;
+  background: #fcd009;
   padding: 15px 20px;
   box-shadow: 0 0 4px 4px rgba(0,0,0,.25);
+  padding-top: 8px;
+}
+.header_nav .navbar-nav {
+  align-items: center;
 }
 .header.sticky .header_nav_menu li a {
   padding-bottom: 3px;
 }
-.header.sticky .header_nav_menu li a:hover {
+/*.header.sticky .header_nav_menu li a:hover {
   box-shadow: inset 0 -1px 0 0 #ff7f00;
-}
+}*/
 .header_top_contact {
   display: flex;
   padding: 0;
@@ -655,12 +664,13 @@ display: none;
   margin-bottom: 5px;
 }
 .header_top_contact li a {
-  color: #484848;
+  color: #000;
 font-size: 14px;
 transition: .2s;
 text-decoration: none;
 line-height: 28px;
-opacity: .7;text-decoration: none;
+opacity: .7;
+text-decoration: none;
 margin-right: 18px;
 display: flex;
 align-items: center;
@@ -676,7 +686,11 @@ align-items: center;
   padding: 8px 18px;
   border-radius: 30px;
   position: relative;
-  background: #ff7f00;color: #fff;
+  background: #000000;
+  color: #fcd009;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
 }
 .header.sticky .header_nav_menu {
   align-items: center;
@@ -825,7 +839,7 @@ padding: 8px 30px;
 .header_nav_menu li.dropdown_menu .sub-menu li a {
   white-space: nowrap;
   font-size: 14px;
-  color: #484848;
+  color: #484848 !important;
   display: block;
   padding: 5px 19px;
   transition: color .2s ease-in-out;
@@ -859,6 +873,9 @@ padding: 8px 30px;
 /* ===================Responsive==================== */
 
 @media (max-width: 991px) {
+  .header_nav .navbar-nav {
+  align-items: inherit;
+}
   .right_modal .modal-dialog {
   right: 0px;
 }
@@ -988,30 +1005,32 @@ transform: translate3d(260px,0,0);
 .call_btn {
   background: #fff;
   display: inline-block;
-  color: #000;
+  color: #000 !important;
   font-size: 14px;
-  border: 1px solid #ff7f00;
+  border: 1px solid #000;
   text-decoration: none;
   padding: 0px 0 0px 12px;
   border-radius: 30px;
 }
 .call_btn strong {
-  background: #ff7f00;
+  background: #000;
   padding: 4px 12px 3px 10px;
   border-radius: 0 11px 11px 0;
   margin-left: 3px;
-  color: #ffe8d7;font-weight: 400;
+  color: #fcd009;font-weight: 400;
 }
 .mb-center {
   text-align: center;
 }
 .call_btn {
   position: relative;
-  top: -13px;
+  top: 0;
+margin-bottom: 12px;
 }
 .sticky .call_btn {
   position: relative;
-  top: -8px;
+  top: 0;
+margin-bottom: 12px;
 }
 .mobile_menu {
   background: transparent;
@@ -1039,11 +1058,15 @@ transform: translate3d(260px,0,0);
 }
 .header_nav_menu li a {
   padding: 12px 10px 12px 15px !important;
-  color: #fff;
+  color: #fff !important;
   opacity: 1;
-  font-weight: 300;
+  font-weight: 700;
   border-top: 1px solid #212122;
   font-size: 14px;box-shadow: none !important;
+}
+.header_nav_menu li.request_btn button {
+  color: #000;
+  background: #fcd009;
 }
 .header_nav_menu .sub-menu {
   position: static;
@@ -1073,6 +1096,9 @@ transform: translate3d(260px,0,0);
   padding: 12px 15px 12px 15px !important;
   border-top: 1px solid #212122;
   margin: 0 !important;
+}
+.openNav .mobile_menu span {
+  background: #fff;
 }
 
 }
