--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -918,9 +918,13 @@ padding: 8px 30px;
 
 
 
+
 /* ===================Responsive==================== */
 
 @media (max-width: 991px) {
+  .banner h1 {
+  margin-top: 60px;
+}
   .right_modal .modal-dialog {
   right: 0px;
 }
