--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -912,7 +912,9 @@ padding: 8px 30px;
 #counter li:nth-child(3) .percent:after {
     content: "%";
 }
-
+.full_page {
+  overflow-y: hidden;
+}
 
 
 
