--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -915,6 +915,9 @@ padding: 8px 30px;
 .full_page {
   overflow-y: hidden;
 }
+.header {
+  z-index: 9999999;
+}
 
 
 
@@ -985,7 +988,7 @@ overflow: auto;
 background-color: #000;
 transition: all .5s ease 0s;
 top: 0;
-height: 100%;
+height: 100vw;
 padding-top: 110px;
 }
 .header_nav_menu {
