--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -913,7 +913,10 @@ padding: 8px 30px;
     content: "%";
 }
 .full_page {
-  overflow-y: hidden;
+  width: 100%;
+display: block;
+position: relative;
+overflow: hidden;
 }
 .header {
   z-index: 9999999;
@@ -988,7 +991,7 @@ overflow: auto;
 background-color: #000;
 transition: all .5s ease 0s;
 top: 0;
-height: 100vw;
+height: 100%;
 padding-top: 110px;
 }
 .header_nav_menu {
