--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,11 +36,7 @@ box-shadow: inset 0 -4px 0 0 #ff7f00;
 .header_nav_menu {
   flex-direction: inherit;
 }
-.container {
-  width: 1220px !important;
-max-width: 1624px !important;
-padding: 0 20px !important;
-}
+
 .sub-title .color-accent {
   display: block;
   border: 3px solid #f98633;
@@ -921,15 +917,56 @@ overflow: hidden;
 .header {
   z-index: 9999999;
 }
-
-
+.container {
+  width: 1500px !important;
+max-width: 1624px !important;
+padding: 0 20px !important;
+}
+.header_inner {
+max-width: 1500px;margin: 0px auto;padding: 0 20px;
+}
 
 
 
 
 /* ===================Responsive==================== */
 
+
+@media only screen and (max-width: 1366px) {
+  .container {
+  width: 1220px !important;
+}
+.header_inner {
+max-width: 100%;margin: 0px auto;padding:0px;
+}
+}
+  @media only screen and (min-width: 992px) and (max-width: 1300px) {
+.container {
+  width: 100% !important;
+}
+.header_nav_menu li a {
+  font-size: 14px;
+}
+.header_nav_menu li.request_btn button {
+  font-size: 13px;
+}
+.header_nav_menu li {
+  margin: 0 20px 0 0;
+}
+.header_logo img {
+  width: 150px;
+}
+}
+@media only screen and (min-width: 992px) {
+  .product_img {
+  width: 500px;
+  height: 550px;
+}
+}
+
 @media (max-width: 991px) {
+  .block-potential .block-potential_container {
+  max-width: 100%;}
   .banner h1 {
   margin-top: 60px;
 }
@@ -1212,7 +1249,7 @@ margin: 0px auto;
   margin-bottom: 30px !important;
 }
 .block_title, .banner h3 {
-  font-size: 35px;}
+  font-size: 30px;}
 .product_item {
   width: 100%;}
   .banner h1 {
