--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,7 +568,7 @@ height: 3px;
   border: 0;
   border-top-left-radius: 8px;
   border-top-right-radius: 34px;
-  color: #fff;
+  color: #c6c6c6;
   box-shadow: 0 12px 14px 8px rgba(0,0,0,.17);
   height: 40px;
   position: fixed;
