--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1539,3 +1539,15 @@ height: 100%;
 .header_other {
   background: #fff;
 }
+.ourclients_slider_content .owl-dots .owl-dot {
+  width: 9px;
+  height: 9px;
+  border: none;
+  border-radius: 50%;
+  margin-right: 10px;
+  padding: 0 !important;
+  background: #ff7f00;
+}
+.ourclients_slider_content .owl-dots .owl-dot.active {
+  background: #000;
+}
