--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1563,3 +1563,34 @@ height: 100%;
 .desktop_about .turnkey_content {
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
+.technologies_bg {
+  background: url('../img/MetaverseBanner03.jpg') no-repeat;
+  background-position: center;
+background-size: cover;background-color: rgba(0, 0, 0, 0.3);
+}
+.technologies_content {
+  text-align: center;
+  background-color: #fff;
+  border-radius: 2rem;
+  padding: 13px 15px;height: 100%;
+}
+.technologies_content h3 {
+  color: #333;
+  margin-bottom: 20px;
+  font-size: 21px;
+}
+.technologies_content ul {
+  padding: 0;margin: 0;
+}
+.technologies_content ul li img {width: 100%;}
+.technologies_content ul li {
+  list-style: none;
+  display: inline-block;
+  width: 10%;
+  text-align: center;
+  margin: 2px 10px;
+}
+.technologies_content ul li p {
+  margin-top: 6px;
+  font-size: 14px;
+}
