--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1614,3 +1614,29 @@ background-size: cover;background-color: rgba(0, 0, 0, 0.3);
 .animation_block .col-md-3, .animation_block .col-md-4 {
   margin-bottom: 15px;
 }
+.title_team {
+  color: #000;
+  font-weight: 700;
+  font-size: 18px;
+  margin: 0;
+  padding-top: 15px;padding-bottom: 3px;
+}
+.des_team {
+  font-style: italic;
+  font-size: 12px;
+}
+.block-team .col-md-3 {
+  margin-bottom: 30px;
+}
+.industries_work a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #ff8001;
+  font-weight: 600;
+}
+.banner_other h1 {
+  font-size: 80px;
+  line-height: 100%;
+  font-weight: 400;
+  text-transform: capitalize;
+}
