--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -812,7 +812,7 @@ padding: 8px 30px;
   border-radius: .3rem .3rem 0 0;
 }
 .sub-menu {
-  background-color: #fff;
+  background-color: #fff3ea;
   z-index: 200;
   padding: 5px 0;
   border-radius: 0 0 5px 5px;
